Front-end modifications and implementation of  weather prediction function from images
